<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_amount_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/str_amount_items"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/til_price">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_amount"
            android:layout_width="120dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/str_price"
        app:layout_constraintStart_toEndOf="@id/til_amount_item"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_add">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_price"
            android:layout_width="200dp"
            android:selectAllOnFocus="true"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_cancel"
        app:layout_constraintEnd_toStartOf="@+id/btn_add"
        app:layout_constraintTop_toTopOf="@id/btn_add"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/str_add"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintTop_toBottomOf="@id/til_price"
        app:layout_constraintEnd_toEndOf="@id/til_price"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>