<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txv_name_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Name Product"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_amount_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/spn_type"
        app:layout_constraintTop_toBottomOf="@id/txv_name_product"
        app:layout_constraintEnd_toStartOf="@id/txv_type">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/str_amount_items"
            android:selectAllOnFocus="true"
            android:focusable="true"
            android:maxLines="1"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/str_type"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintTop_toTopOf="@id/spn_type"
        app:layout_constraintBottom_toBottomOf="@id/spn_type"
        app:layout_constraintStart_toEndOf="@id/til_amount_item"
        app:layout_constraintEnd_toStartOf="@id/spn_type"/>

    <Spinner
        android:id="@+id/spn_type"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:entries="@array/types"
        app:layout_constraintTop_toTopOf="@id/til_amount_item"
        app:layout_constraintBottom_toBottomOf="@id/til_amount_item"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:focusable="true"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_amount_item">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_description_opt"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/str_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/til_description_item"
        app:layout_constraintTop_toBottomOf="@id/til_description_item"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/str_cancel"
        app:layout_constraintTop_toTopOf="@id/btn_save"
        app:layout_constraintEnd_toStartOf="@id/btn_save"
        app:layout_constraintBottom_toBottomOf="@id/btn_save"
        style="@style/Widget.MaterialComponents.Button.TextButton" />

</androidx.constraintlayout.widget.ConstraintLayout>