<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <ImageView
            android:id="@+id/img_check"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:visibility="gone"
            android:contentDescription="@string/str_image_check_item"
            android:src="@drawable/baseline_check_circle_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txv_name_item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/baseline_check_circle_24"/>

        <TextView
            android:id="@+id/txv_name_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_check"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Name item" />

        <TextView
            android:id="@+id/txv_amount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/str_amount_items"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintStart_toStartOf="@id/txv_name_item"
            app:layout_constraintTop_toBottomOf="@id/txv_name_item" />

        <TextView
            android:id="@+id/txv_amount_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintStart_toEndOf="@id/txv_amount_text"
            app:layout_constraintTop_toTopOf="@id/txv_amount_text"
            tools:text="1" />


        <TextView
            android:id="@+id/txv_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/str_type"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintBottom_toBottomOf="@+id/txv_amount_text"
            app:layout_constraintStart_toEndOf="@id/txv_amount_items"
            app:layout_constraintTop_toTopOf="@id/txv_amount_text" />

        <TextView
            android:id="@+id/txv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintBottom_toBottomOf="@+id/txv_amount_text"
            app:layout_constraintStart_toEndOf="@id/txv_type_text"
            app:layout_constraintTop_toTopOf="@id/txv_amount_text"
            app:layout_constraintEnd_toStartOf="@id/txv_price_text"
            tools:text="Unit" />

        <TextView
            android:id="@+id/txv_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/str_price"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintBottom_toBottomOf="@+id/txv_amount_text"
            app:layout_constraintEnd_toStartOf="@id/txv_price"
            app:layout_constraintStart_toEndOf="@+id/txv_type"
            app:layout_constraintTop_toTopOf="@id/txv_amount_text" />


        <TextView
            android:id="@+id/txv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/str_"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintBottom_toBottomOf="@+id/txv_amount_text"
            app:layout_constraintStart_toEndOf="@id/txv_price_text"
            app:layout_constraintTop_toTopOf="@id/txv_amount_text" />

        <TextView
            android:id="@+id/txv_desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_description"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/txv_name_item"
            app:layout_constraintTop_toBottomOf="@+id/txv_amount_text" />

        <TextView
            android:id="@+id/txv_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:text="@string/str_"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/txv_name_item"
            app:layout_constraintStart_toEndOf="@+id/txv_desc_text"
            app:layout_constraintTop_toBottomOf="@id/txv_amount_text"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>